--- a/pom.xml
+++ b/pom.xml
@@ -15,34 +15,27 @@
   <!-- POM Variables -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>16</java.version>
     <maven.compiler.source>16</maven.compiler.source>
     <maven.compiler.target>16</maven.compiler.target>
-    <java.version>16</java.version>
-    <auto-value.version>1.8.1</auto-value.version>
     <lombok.version>1.18.20</lombok.version>
+    <junit.version>5.8.0-M1</junit.version>
   </properties>
 
   <!-- Dependencies -->
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/junit/junit -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.0-M1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
-      <version>5.8.0-M1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -62,6 +55,11 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>30.1-jre</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
     </dependency>
   </dependencies>
 
@@ -93,12 +91,12 @@
         <version>3.0.0</version>
         <executions>
           <execution>
-            <id>ex41.Application</id>
+            <id>ex41.App</id>
             <goals>
               <goal>java</goal>
             </goals>
             <configuration>
-              <mainClass>ex41.Application</mainClass>
+              <mainClass>ex41.App</mainClass>
               <arguments/>
             </configuration>
           </execution>
