--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- Necessary dependency that isn't listed on the home page. -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
@@ -71,6 +78,13 @@
   <!-- Plugins -->
   <build>
     <plugins>
+      <!-- To get JUnit5 working. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
+        <version>2.22.0</version>
+      </plugin>
       <!-- Compile-time stuff -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
